@@ -12,6 +12,7 @@ Version 1.1.3 to be released
 - Bug #1213: Fixed the bug that skipOnError doesn't have effect on inline validators (Qiang)
 - Bug #1226: CWebUser::autoRenewCookie does not handle the case when the user is already logged in (Qiang)
 - Bug #1231: CPgsqlColumnSchema would incorrectly parse the default value with some complex expressions (Qiang)
+- Bug #1227: CActiveRecord::resetScope doesn't work with default scope (Sam Dark)
 - Enh #1158: Added translations in Latvian (lafriks)
 - Enh #1166: Added CActiveRecord::setOldPrimaryKey (Qiang)
 - Enh #1174: AR's count() now generates more reasonable SQL statement when 'group' option is specified (Qiang)
